# templateto_erpnext

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  init.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
templateto_reports/: __init__.py  api.py  hooks.py  modules.txt  patches.txt  pdf_override.py  setup.py
templateto_reports/patches/v1_0/: add_pdf_generator_option.py
templateto_reports/templateto_reports/doctype/templateto_settings/: templateto_settings.js  templateto_settings.json  templateto_settings.py
templateto_reports/tests/: test_pdf_override.py
