[project]
name = "templateto_reports"
version = "1.0.0"
description = "Replace wkhtmltopdf with modern Chrome-based PDF rendering in Frappe/ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TemplateTo", email = "david@templateto.com" }]
# Frappe Cloud Marketplace requires a bounded Frappe dependency in pyproject.toml.
# This is the `version-15` branch — pinned to Frappe 15.x only.
dependencies = ["requests", "frappe>=15.0,<16.0"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
