[project]
name = "templateto_reports"
version = "1.0.0"
description = "Replace wkhtmltopdf with modern Chrome-based PDF rendering in Frappe/ERPNext"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "TemplateTo", email = "david@templateto.com" }]
# Frappe Cloud Marketplace requires a bounded Frappe dependency in pyproject.toml.
# This is the `version-16` branch — pinned to Frappe 16.x only.
# Frappe 16 itself requires Python >=3.14,<3.15.
dependencies = ["requests", "frappe>=16.0,<17.0"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
