[project]
name = "templateto_reports"
version = "1.0.0"
description = "Replace wkhtmltopdf with modern Chrome-based PDF rendering in Frappe/ERPNext"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "TemplateTo", email = "david@templateto.com" }]
# Frappe itself is provided by the bench environment, not pip — listing it as
# a dependency makes uv try to resolve it from PyPI (which fails because
# frappe uses URL-based deps for pypika). The Frappe version constraint is
# declared via `required_apps` in hooks.py instead.
# version-16 branch: requires Python 3.14+ (matching Frappe 16's requirement).
dependencies = ["requests"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
